--- a/REACT/gerenciadordeprojetos/src/index.css
+++ b/REACT/gerenciadordeprojetos/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: url('./background.jpg');
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh; */
 }
 
 code {
